Fix for CSS bug when options overflow the panel

--- a/app/assets/stylesheets/modules/_wizard.styl
+++ b/app/assets/stylesheets/modules/_wizard.styl
@@ -33,7 +33,6 @@ wizard-width = 860px
     box-shadow 0 0 15px 0 rgba(0, 0, 0, .2)
     left -150%
     margin-bottom 20px
-    max-height 100%
     max-width wizard-width
     min-height 600px
     opacity 0
